Fixed nevbar install button contrast colors on light mode

--- a/src/components/JetbrainsPlugin/JetBrainsPluginButton/JetBrainsPluginButton.module.scss
+++ b/src/components/JetbrainsPlugin/JetBrainsPluginButton/JetBrainsPluginButton.module.scss
@@ -1,7 +1,7 @@
 // src/components/JetBrainsPluginButton/JetBrainsPluginButton.module.scss
 .defaultButton {
   padding: 8px 16px;
-  background: hsl(var(--accent-8));
+  background: light-dark(hsl(var(--accent-9)), hsl(var(--accent-8)));
   color: hsl(var(--white));
   text-decoration: none;
   border-radius: 8px;
